fix current affairs mini tab font color extend

--- a/templates/current_affairs.html
+++ b/templates/current_affairs.html
@@ -13,7 +13,7 @@ block content %}
   }
 
   .nav-link:hover {
-    color: black !important; /* Darker on hover for better contrast */
+    color: white !important; /* Darker on hover for better contrast */
   }
 </style>
 <div class="container mt-4">
