dummy data ph stocks

--- a/templates/base.html
+++ b/templates/base.html
@@ -122,6 +122,9 @@
               <a class="nav-link" href="/stocks">Stocks</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/ph_stocks">PH Stocks</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/sector_news">Sector News</a>
             </li>
             <!-- New Simulation Navbar Item -->
