remove all and use world and add other category

--- a/templates/current_affairs.html
+++ b/templates/current_affairs.html
@@ -45,19 +45,28 @@ block content %}
     id="newsTabs"
   >
     <li class="nav-item">
-      <a class="nav-link active" data-tab="all" href="#">All</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" data-tab="world" href="#">World</a>
+      <a class="nav-link active" data-tab="all" href="#">World</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" data-tab="north_america" href="#">North America</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-tab="south_america" href="#">South America</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" data-tab="europe" href="#">Europe</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" data-tab="asia" href="#">Asia</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-tab="africa" href="#">Africa</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-tab="australia" href="#">Australia</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-tab="mena" href="#">MENA</a>
     </li>
   </ul>
 
